--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #ffffff;
@@ -23,4 +23,17 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.text-a-mess-gradient {
+  @apply bg-gradient-to-r from-blue-500 via-red-500 to-pink-500 inline-block text-transparent bg-clip-text pr-1;
+}
+
+/* background version */
+.bg-a-mess-gradient {
+  @apply bg-gradient-to-r from-blue-600 via-red-500 to-pink-600;
+}
+/* hover version */
+.bg-a-mess-gradient:hover {
+  @apply bg-gradient-to-r from-red-500 via-pink-600 to-blue-600 scale-[1.01];
 }
